--- a/config
+++ b/config
@@ -1,1 +1,9 @@
-AWS_SECRET_ACCESS_KEY=AKMWOUTHGBNOUIT54892
+#AWS_SECRET_ACCESS_KEY
+AKIAIOSFODNN7EXAMPLE
+
+#API Key
+AIzaSyDaGmWKa4JsXZ-HjGw7ISLn_3namBGewQe
+
+
+#Stripe Secret Key
+sk_live_4eC39HqLyjWDarjtT1zdp7dc
