--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Run TruffleHog on PR branch
         run: |
           echo "Scanning branch: ${{ github.head_ref }}"
-          trufflehog filesystem . --json > trufflehog-results.json
+          git fetch origin ${{ github.base_ref }} --depth=1
+          trufflehog git diff origin/${{ github.base_ref }}...HEAD --json > trufflehog_results.json
           cat trufflehog-results.json
 
       - name: Upload scan results
