--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -23,20 +23,47 @@ jobs:
           path: ./
           base: ${{ github.event.repository.default_branch }}
           head: HEAD
-          extra_args: --debug --only-verified
+          extra_args: --debug --include-detectors=all --no-verification
+
+      - name: Manual TruffleHog Scan (Fallback)
+        id: manual-scan
+        if: steps.trufflehog.outcome == 'success'
+        run: |
+          # Install TruffleHog manually for more control
+          curl -sSfL https://raw.githubusercontent.com/trufflesecurity/trufflehog/main/scripts/install.sh | sh -s -- -b /usr/local/bin
+          
+          # Scan all changed files
+          echo "Scanning changed files..."
+          git diff --name-only ${{ github.event.pull_request.base.sha }}..HEAD > changed_files.txt
+          
+          SECRET_FOUND=false
+          while IFS= read -r file; do
+            if [ -f "$file" ]; then
+              echo "Scanning: $file"
+              if trufflehog filesystem "$file" --no-update; then
+                SECRET_FOUND=true
+                echo "::error::Secrets found in $file"
+              fi
+            fi
+          done < changed_files.txt
+          
+          if [ "$SECRET_FOUND" = true ]; then
+            echo "manual_scan_failed=true" >> $GITHUB_OUTPUT
+            exit 1
+          fi
 
       - name: Check Results and Block PR
         run: |
-          if [ "${{ steps.trufflehog.outcome }}" == "failure" ]; then
+          if [ "${{ steps.trufflehog.outcome }}" == "failure" ] || [ "${{ steps.manual-scan.outputs.manual_scan_failed }}" == "true" ]; then
             echo "🚨 SECRETS DETECTED! This PR cannot be merged."
-            echo "Check the TruffleHog step above for details."
+            echo "Check the scan steps above for details."
             exit 1
           else
             echo "✅ No secrets detected. PR can proceed."
           fi
 
       - name: Comment on PR if secrets found
-        if: steps.trufflehog.outcome == 'failure'
+        if: steps.trufflehog.outcome == 'failure' || steps.manual-scan.outputs.manual_scan_failed == 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -44,15 +71,16 @@ jobs:
             
             This PR contains potential secrets and cannot be merged until they are removed.
             
-            Please check the **TruffleHog OSS** step in the workflow run above for detailed information about the detected secrets.
+            Please check the workflow logs above for detailed information about the detected secrets.
+            
+            ### Files to check:
+            Look for secrets in files mentioned in the scan output above.
             
             ### Next Steps:
             1. Review the detected secrets in the workflow logs
-            2. Remove the secrets from your code
+            2. Remove the secrets from your code  
             3. Use environment variables or secure secret management instead
-            4. Push your changes to update this PR
-            
-            The PR will be automatically re-scanned when you push new commits.`;
+            4. Push your changes to update this PR`;
             
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
